# SecretSynth

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug-crash-intake.yml
.github/workflows/: build-plugin.yml
cmake/: PluginIdentity.cmake
docs/: compatibility-policy.md
docs/qa/: ableton-matrix.md
docs/release/: go-no-go-v1.md  known-issues.md  quickstart-install.md  release-checklist.md
presets/: Init.synthpreset
presets/factory/: bass_01_sub-anchor.synthpreset  bass_02_drive-mono.synthpreset  bass_03_rubber-low.synthpreset  bass_04_fm-growl.synthpreset  bass_05_deep-pulse.synthpreset  bass_06_round-analog.synthpreset  bass_07_low-plucker.synthpreset  bass_08_acid-bite.synthpreset  bass_09_solid-fifth.synthpreset  bass_10_muted-dirt.synthpreset  bass_11_velvet-sub.synthpreset  bass_12_wide-mono.synthpreset  fx_01_riser-thin.synthpreset  fx_02_falling-bit.synthpreset  fx_03_noise-burst.synthpreset  fx_04_laser-zap.synthpreset  fx_05_impact-tone.synthpreset  fx_06_sci-sweep.synthpreset  fx_07_glitch-ping.synthpreset  fx_08_drone-spark.synthpreset  fx_09_metal-drop.synthpreset  fx_10_retro-beam.synthpreset  fx_11_ghost-hit.synthpreset  fx_12_warp-spark.synthpreset  index.json  keys_01_soft-ep.synthpreset  keys_02_bright-ep.synthpreset  keys_03_stage-keys.synthpreset  keys_04_tape-piano.synthpreset  keys_05_mellow-clav.synthpreset  keys_06_lounge-keys.synthpreset  keys_07_hammer-tone.synthpreset  keys_08_bell-keys.synthpreset  keys_09_dusty-reed.synthpreset  keys_10_neo-piano.synthpreset  keys_11_house-keys.synthpreset  keys_12_warm-tines.synthpreset  pad_01_cloud-wash.synthpreset  pad_02_noir-drift.synthpreset  pad_03_aurora-bed.synthpreset  (+22 more)
scripts/release/: package-beta.ps1  package-beta.sh
src/dsp/: SimpleVoice.cpp  SimpleVoice.h
src/dsp/filter/: MultiModeFilter.cpp  MultiModeFilter.h
src/dsp/mod/: Modulation.cpp  Modulation.h
src/dsp/osc/: PhaseWarpOscillator.cpp  PhaseWarpOscillator.h
src/dsp/voice/: Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/plugin/parameters/: ParameterRegistry.cpp  ParameterRegistry.h  StateSerialization.cpp  StateSerialization.h
src/ui/: MainEditorComponent.cpp  MainEditorComponent.h
tests/: test_simple_voice.cpp
tests/dsp/: test_filter.cpp  test_modulation.cpp  test_phase_warp_oscillator.cpp  test_voice_manager.cpp
tests/plugin/: test_state_serialization.cpp
tools/: osc_quality_benchmark.cpp  preset_sanity.py
